compiler/testData/diagnostics/tests/duplicateJvmSignature/specialNames/instance.kt
<!CONFLICTING_JVM_DECLARATIONS!>object O<!> {
    <!CONFLICTING_JVM_DECLARATIONS!>val INSTANCE: O<!> = null!!
}